# PNG-Encoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_raw_from_png.py  micro-benchmark.py
examples/raw/: test1-200x200.raw  test2-100x75.raw  test3-400x300.raw  test4-540x360.raw  test5-1280x720.raw
include/: color_filter.h  deflate.h  filter.h  grayscale_filter.h  image_loader.h  negative_filter.h  perlin_noise_filter.h  png_writer.h
src/: color_filter.cpp  deflate.cpp  filter.cpp  grayscale_filter.cpp  image_loader.cpp  main.cpp  negative_filter.cpp  perlin_noise_filter.cpp  png_writer.cpp
tests/: CMakeLists.txt  test_color_filter.cpp  test_filter.cpp  test_image_loader.cpp  test_png_writer.cpp
